# slapbot

./: .env.example  .gitignore  LICENSE  README.md  handler.py  lambda_handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: main.yml
config/: tools.py.example
src/commands/: slap.py
src/config/: tools.py
src/helpers/: adapters.py  enums.py  formatters.py  logging.py  message.py  parsers.py  types.py
