[tool.poetry]
name = "slapbot"
version = "0.1.0"
description = "Slap your friends in Telegram."
authors = ["Justin Arista Kasin <justin+github@aristakas.in>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
