[tool.poetry]
name = "slapbot"
version = "0.1.0"
description = "Slap your friends in Telegram."
authors = ["Justin Arista Kasin <justin+github@aristakas.in>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
